syntax = "proto3";
package data_plane;

option go_package = "github.com/eth-easl/cluster_manager/data_plane/api/proto";

message DeploymentName {
  string Name = 1;
}

message ActionStatus {
  bool Success = 1;
  string Message = 2;
}